fixed jacoco y gradle configs